added controller,service e tests